actualice el gitgnore

--- a/.gitignore
+++ b/.gitignore
@@ -178,8 +178,10 @@ cython_debug/
 data/raw*
 data/processed*
 data/documentation*
+analisis_notebooks*
 
 # excepto los .gitkeep dentro de cada subdirectorio
 !data/raw/.gitkeep
 !data/processed/.gitkeep
 !data/documentation/.gitkeep
+!analisis_notebooks/.gitkeep
