actualice el gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,18 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+
+# Ignorar todo lo que haya dentro de data/
+data/raw*
+data/processed*
+data/documentation*
+notebooks/procesamiento_datos/*
+outputs/graphics*
+
+# excepto los .gitkeep dentro de cada subdirectorio
+!data/raw/.gitkeep
+!data/processed/.gitkeep
+!data/documentation/.gitkeep
+!notebooks/procesamiento_datos/.gitkeep
+!outputs/graphics/.gitkeep
